# geomath

./: .gitignore  CMakeLists.txt  CommonMath.hpp  LICENSE  Math.hpp  MathAmalgamated.cpp  Readme.md  THIRD_PARTY_LICENSES.txt  Vector2D.hpp  Vector3D.hpp  Vector4D.hpp
Algebra/: EulerAngles.hpp  Fraction.hpp  Quaternion.hpp  RotationMatrix.hpp  ViewMatrix.hpp
Algebra/Matrices/: IMatrix.hpp  Matrix.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Operators.hpp
Geometry/: Vector2D.hpp  Vector3D.hpp  Vector4D.hpp
Shapes/2D/: BBox2D.hpp  Circle.hpp  Circle2D.hpp  ConvexHull2D.hpp  ConvexPolygon2D.hpp  IShape2D.hpp  Line2D.hpp  Polygon.hpp  Polygon2D.hpp  Ray2D.hpp  Rectangle.hpp  Rectangle2D.hpp  Triangle.hpp  Triangle2D.hpp  TriangleMesh2D.hpp
Shapes/2D/Algorithms2D/: Algorithms2D.cpp  Algorithms2D.hpp
Shapes/2D/Algorithms2D/Delaunay/: DelaunayTriangulation.cpp  DelaunayTriangulation.hpp  THIRD_PARTY_LICENSES.txt
Shapes/2D/Intersections2D/: Intersections2D.cpp  Intersections2D.hpp
Shapes/2D/Structures/: ISpatialIndex2D.hpp  ShapeStore2D.hpp
Shapes/3D/: BBox3D.hpp  Capsule.hpp  Cylinder.hpp  IShape3D.hpp  Line3D.hpp  Mesh.hpp  Plane.hpp  Ray3D.hpp  Sphere.hpp  Triangle3D.hpp  TriangleMesh3D.hpp
Shapes/3D/Algorithms/: Algorithms3D.cpp  Algorithms3D.hpp
Shapes/3D/Algorithms3D/: Algorithms3D.cpp  Algorithms3D.hpp
Shapes/3D/Intersection/: Intersections3D.cpp  Intersections3D.hpp
tests/: main.cpp
tests/Shapes/2D/: test_circle2D.cpp  test_convex_polygon2D.cpp  test_polygon2D.cpp  test_rectangle2D.cpp  test_shape2D_utility.hpp  test_triangle2d.cpp
